<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.github.t3r1jj.pbmap.main.drawer.DrawerActivity"
    tools:showIn="@layout/activity_map">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/content_map" />
    </FrameLayout>

    <include layout="@layout/activity_map_overlay" />

    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment
        android:fitsSystemWindows="true"
        android:id="@+id/navigation_drawer"
        android:name="io.github.t3r1jj.pbmap.main.drawer.MapsDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/fragment_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
