<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_integration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.github.t3r1jj.pbmap.sample.integration.IntegrationActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/integration_description"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/show_place_ids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="onShowPlaceIds"
            android:text="@string/show_place_ids" />

        <Button
            android:id="@+id/show_place_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="onShowPlaceNames"
            android:text="@string/show_place_names" />
    </LinearLayout>

    <EditText
        android:id="@+id/search_query_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/search_query_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/search_query" />

    <Button
        android:id="@+id/pinpoint_place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="onDefinedPinpoint"
        android:text="@string/pinpoint_defined_location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/map_id_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/map_id_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/map_id" />

        <EditText
            android:id="@+id/lat_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lat_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@string/lat" />

        <EditText
            android:id="@+id/lng_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lng_hint"
            android:inputType="numberDecimal"
            android:text="@string/lng"
            tools:ignore="Autofill" />
    </LinearLayout>

    <Button
        android:id="@+id/pinpoint_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="onCustomPinpoint"
        android:text="@string/pinpoint_custom_location" />

</LinearLayout>
